# foinfo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-macos.yml  build-ubuntu-linux.yml  build-windows  build-windows.yml
src/: foinfo.cpp  foinfo.hpp  fsutil.cpp  fsutil.hpp  lpcore.cpp  lpcore.hpp  lspro.cpp  lspro.hpp  main.cpp
